crates/nirvash-macros/tests/fixtures/projection_model_invalid_pattern.stderr
error: nirvash_projection_model output_abstract identifier patterns require `name @ Variant(...)`
  --> tests/fixtures/projection_model_invalid_pattern.rs:86:9
   |
86 |         effect => drop
   |         ^^^^^^

warning: unused import: `conformance::ProtocolConformanceSpec`
 --> tests/fixtures/projection_model_invalid_pattern.rs:1:90
  |
1 | use nirvash_core::{ModelCase, ModelCaseSource, BoolExpr, TemporalSpec, TransitionSystem, conformance::ProtocolConformanceSpec};
  |                                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
